--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ description = "Rust library for rerobots"
 homepage = "https://github.com/rerobots/rs"
 repository = "https://github.com/rerobots/rs"
 license = "Apache-2.0"
-version = "0.1.0-devel"
+version = "0.1.0"
 authors = ["Scott C. Livingston <scott@rerobots.net>"]
 edition = "2018"
 include = [
