--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,9 @@ jobs:
         runs-on: ubuntu-22.04
         steps:
             - uses: actions/checkout@v2
+            - name: Prepare to build
+              run: |
+                touch keys/public.pem
             - name: Run tests
               run: |
                 cargo test
