--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ jobs:
             - uses: actions/checkout@v2
             - name: Prepare to build
               run: |
+                mkdir keys
                 touch keys/public.pem
             - name: Run tests
               run: |
