--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,13 +10,20 @@ jobs:
         runs-on: ubuntu-22.04
         steps:
             - uses: actions/checkout@v4
+            - run: |
+                rustup toolchain install nightly --profile minimal
+                rustup component add --toolchain nightly rustfmt
+            - run: rustup toolchain install stable --profile minimal
+            - uses: Swatinem/rust-cache@v2
             - name: Prepare to build
               run: |
                 mkdir keys
                 touch keys/public.pem
             - name: Lint
               run: |
+                cargo +nightly fmt --check
                 cargo check
+                cargo clippy --tests -- -D clippy::all
             - name: Run tests
               run: |
                 cargo test
