--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ include = [
 
 [dependencies]
 actix = "0.13"
-awc = { version = "3.5", features = ["openssl"] }
+awc = { version = "3.5", features = ["rustls"] }
 chrono = "0.4"
 env_logger = "0.11.5"
 jwt = { version = "0.11", features = ["openssl"] }
