PKG: corp address

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ homepage = "https://github.com/rerobots/rs"
 repository = "https://github.com/rerobots/rs"
 license = "Apache-2.0"
 version = "0.12.1-devel"
-authors = ["Scott C. Livingston <scott@rerobots.net>"]
+authors = ["rerobots, Inc. <q@rerobots.net>"]
 edition = "2018"
 include = [
     "/src",
