--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ description = "Rust library for rerobots"
 homepage = "https://github.com/rerobots/rs"
 repository = "https://github.com/rerobots/rs"
 license = "Apache-2.0"
-version = "0.12.1-devel"
+version = "0.12.1"
 authors = ["rerobots, Inc. <q@rerobots.net>"]
 edition = "2018"
 include = [
