--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,8 +6,14 @@ on:
     pull_request:
 jobs:
     build:
-        name: Build
-        runs-on: ubuntu-22.04
+        name: Build and test
+        runs-on: ${{ matrix.os }}
+        strategy:
+            matrix:
+                os: [
+                    ubuntu-22.04,
+                    macos-latest,
+                    ]
         steps:
             - uses: actions/checkout@v4
             - run: rustup toolchain install stable --profile minimal
