--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
                 os: [
                     ubuntu-22.04,
                     macos-latest,
+                    windows-latest,
                     ]
         steps:
             - uses: actions/checkout@v4
@@ -23,6 +24,7 @@ jobs:
                 mkdir keys
                 touch keys/public.pem
             - name: Lint
+              if: runner.os != 'Windows'
               run: |
                 cargo fmt --check
                 cargo check
